--- a/Survey-form/index.html
+++ b/Survey-form/index.html
@@ -41,15 +41,15 @@
           <label for="">How likely you would recommend FCC</label>
           <ul class="radio-buttson" style="list-style: none;">
             <li>
-              <input name="radio-buttons" type="radio">
+              <input value="1" name="radio-buttons" type="radio">
               <label for="">Definitly</label>
             </li>
             <li>
-              <input name="radio-buttons" type="radio">
+              <input value="2" name="radio-buttons" type="radio">
               <label for="">Maybe</label>
             </li>
             <li>
-              <input name="radio-buttons" type="radio">
+              <input value="3" name="radio-buttons" type="radio">
               <label for="">Not Sure</label>
             </li>
           </ul>
@@ -59,61 +59,61 @@
           <ul class="checkboxes" style="list-style: none">
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="preer">
+                <input value="1" type="checkbox" name="preer">
                 Front-end projects
               </label>
             </li>
             <li class="checkbox">
               <label for="">
-                <input type="checkbox" name="">
+                <input value="2" type="checkbox" name="">
                 back-end projects
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="3" type="checkbox" name="">
                 Data Visualization
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="4" type="checkbox" name="">
                 Challenges
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="5" type="checkbox" name="">
                Open source community
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="6" type="checkbox" name="">
                 Videos
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="7" type="checkbox" name="">
                 City meetups
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="8" type="checkbox" name="">
                 Wiki
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="9" type="checkbox" name="">
                 Forum
               </label>
             </li>
             <li class="checkbox">
               <label>
-                <input type="checkbox" name="">
+                <input value="10" type="checkbox" name="">
                 Additional Courses
               </label>
             </li>
@@ -123,7 +123,7 @@
           <label for="textarea">Any suggestions</label>
           <textarea name="comments" id="textarea" placeholder="Enter your text here..."></textarea>
         </div>
-        <button type="button" id="submit">Submit</button>
+        <button type="submit" id="submit">Submit</button>
       </form>
     </div>
   </main>
